hphp/test/zend/good/Zend/tests/bug67436/c.php
<?hh

class c {
	const TESTCONSTANT = "c::TESTCONSTANT";
}
