hphp/test/zend/bad/error_016.php
<?php

trait foo {
	const a = 1;
}

?>